--- a/.env.sample
+++ b/.env.sample
@@ -9,5 +9,5 @@ CONTENTSTACK_ENVIRONMENT= publishing_env
 # optional CDN url for EU region example : https://eu-cdn.contentstack.com/v3
 # uncomment & add the EU region url CONTENTSTACK_CDN cannot be empty
 # CONTENTSTACK_CDN =
-#hosted site url example: https://gatsby-starter-app-contentstack.vercel.app 
+#hosted site url example: https://contentstack-gatsby-starter-app.vercel.app/
 CONTENTSTACK_HOSTED_URL =
